<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<version>0.1.3-SNAPSHOT</version>
	<groupId>com.sixdimensions.wcm.cq</groupId>
	<artifactId>com.sixdimensions.wcm.cq.taglib.ext</artifactId>
	<packaging>bundle</packaging>

	<name>CQ Extended Tag Library</name>
	<description>Extended Tag Library for Adobe CQ5, exposes commonly used actions as tags.</description>
	<url>https://github.com/SixDimensions/CQ-Extended-Tag-Library</url>
	<inceptionYear>2012</inceptionYear>
	<organization>
		<name>Six Dimensions</name>
		<url>http://www.sixdimensions.com</url>
	</organization>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>klcodanr</id>
			<name>Dan Klco</name>
			<email>dan.klco@sixdimensions.com</email>
			<organization>Six Dimensions</organization>
			<organizationUrl>http://www.sixdimensions.com</organizationUrl>
		</developer>
	</developers>
	<scm>
		<url>git@github.com:SixDimensions/CQ-Extended-Tag-Library.git</url>
		<developerConnection>scm:git:git@github.com:SixDimensions/CQ-Extended-Tag-Library.git</developerConnection>
		<connection>scm:git:git@github.com:SixDimensions/CQ-Extended-Tag-Library.git</connection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>

			<!-- Compile for Java 1.6 -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- Produce a bundle -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.3.7</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-scr-plugin</artifactId>
				<version>1.7.4</version>
				<executions>
					<execution>
						<id>generate-scr-scrdescriptor</id>
						<goals>
							<goal>scr</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Execute static code analysis -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>checkstyle</id>
						<phase>verify</phase>
						<goals>
							<goal>checkstyle</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>${basedir}/checkstyle.xml</configLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.4.0</version>
				<executions>
					<execution>
						<id>findbugs</id>
						<phase>verify</phase>
						<goals>
							<goal>findbugs</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>

			<!-- Generate JavaDoc and Source Archives -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>create-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<execution>
						<id>create-javadoc</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Setup and perform integration tests -->
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<tasks>
								<copy file="${project.build.directory}/${project.build.finalName}.jar" toDir="${project.build.directory}/sling/additional-bundles" verbose="true" />
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.apache.sling</groupId>
									<artifactId>org.apache.sling.scripting.jsp.taglib</artifactId>
									<version>2.2.0</version>
									<type>jar</type>
									<overWrite>true</overWrite>
									<outputDirectory>${project.build.directory}/classes</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.12.4</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includes>
						<include>**/*IT.java</include>
					</includes>
					<systemPropertyVariables>
						<jar.executor.work.folder>${cq.dir}/crx-quickstart</jar.executor.work.folder>
						<jar.executor.jar.options>-p $JAREXEC_SERVER_PORT$ -nobrowser -nofork</jar.executor.jar.options>
						<jar.executor.vm.options>-XX:MaxPermSize=256m -Xmx1024M -Xrunjdwp:transport=dt_socket,server=y,address=30303,suspend=n -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false</jar.executor.vm.options>
						<jar.executor.jar.folder>${cq.dir}</jar.executor.jar.folder>
						<jar.executor.jar.name.regexp>cq5.*jar$</jar.executor.jar.name.regexp>
						<additional.bundles.path>${project.build.directory}/sling/additional-bundles</additional.bundles.path>
						<keepJarRunning>false</keepJarRunning>
						<server.ready.timeout.seconds>600</server.ready.timeout.seconds>
						<sling.testing.timeout.multiplier>1.0</sling.testing.timeout.multiplier>
						<server.ready.path.1>/libs/granite/core/content/login.html:QUICKSTART_HOMEPAGE</server.ready.path.1>
						<start.bundles.timeout.seconds>30</start.bundles.timeout.seconds>
						<bundle.install.timeout.seconds>20</bundle.install.timeout.seconds>
						<sling.additional.bundle.0>com.sixdimensions.wcm.cq.taglib.ext</sling.additional.bundle.0>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.felix
										</groupId>
										<artifactId>
											maven-scr-plugin
										</artifactId>
										<versionRange>
											[1.7.0,)
										</versionRange>
										<goals>
											<goal>scr</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-javadoc-plugin
										</artifactId>
										<versionRange>
											[2.7,)
										</versionRange>
										<goals>
											<goal>javadoc</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>

		<!-- Adobe Proprietary Dependencies -->
		<dependency>
			<groupId>com.adobe.granite</groupId>
			<artifactId>com.adobe.granite.xssprotection</artifactId>
			<version>5.5.14</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.commons</groupId>
			<artifactId>day-commons-text</artifactId>
			<version>1.1.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.cq</groupId>
			<artifactId>cq-commons</artifactId>
			<version>5.5.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.cq.dam</groupId>
			<artifactId>cq-dam-api</artifactId>
			<version>5.5.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.cq.dam</groupId>
			<artifactId>cq-dam-commons</artifactId>
			<version>5.5.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.cq.wcm</groupId>
			<artifactId>cq-wcm-api</artifactId>
			<version>5.5.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.day.cq.wcm</groupId>
			<artifactId>cq-wcm-taglib</artifactId>
			<version>5.5.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Open Source Dependencies -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<version>1.4.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.scr.annotations</artifactId>
			<version>1.6.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.api</artifactId>
			<version>2.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.scripting.api</artifactId>
			<version>2.1.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.scripting.core</artifactId>
			<version>2.0.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.scripting.jsp.taglib</artifactId>
			<version>2.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.scripting.jsp</artifactId>
			<version>2.0.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.settings</artifactId>
			<version>1.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.4</version>
			<scope>provided</scope>
		</dependency>

		<!-- Testing Dependencies -->
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.commons.testing</artifactId>
			<version>2.0.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.testing.tools</artifactId>
			<version>1.0.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- Including the Adobe Repository so we can include their proprietary 
		dependencies -->
	<repositories>
		<repository>
			<id>adobe-repo</id>
			<url>http://repo.adobe.com/nexus/content/groups/public</url>
		</repository>
	</repositories>
</project>
